--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,12 +5,12 @@
 
 }
 
-#root{
+#root {
     display: flex;
     justify-content: center;
 }
 
-.App{
+.App {
     width: 800px;
 
 }
@@ -22,4 +22,38 @@
     margin-top: 15px;
     justify-content: space-between;
     align-items: center;
+}
+
+.post-enter {
+    transform: translateX(-350px);
+}
+
+.post-enter-active {
+    transform: translateX(0px);
+    transition: all 500ms ease-in;
+}
+
+.post-exit {
+    opacity: 1;
+}
+
+.post-exit-active {
+    transform: translateX(-350px);
+    transition: all 500ms ease-in;
+}
+
+.page__wrapper {
+    margin-top: 30px;
+    display: flex;
+}
+
+.page {
+    padding: 10px;
+    border: 1px solid teal;
+    cursor: pointer;
+}
+
+.page__current{
+    border: 2px solid orange;
+    font-weight: bold;
 }
